--- a/Examples/Stereo/CMakeLists.txt
+++ b/Examples/Stereo/CMakeLists.txt
@@ -17,13 +17,13 @@ if(realsense2_FOUND)
     target_link_libraries(stereo_realsense_D435i ${PROJECT_NAME})
 endif()
 
-# Install executables to Examples/Stereo directory
+# Install executables to bin/Examples directory
 install(TARGETS stereo_kitti stereo_euroc stereo_tum_vi
-    DESTINATION Examples/Stereo
+    DESTINATION bin/Examples
     COMPONENT examples)
 
 if(realsense2_FOUND)
     install(TARGETS stereo_realsense_t265 stereo_realsense_D435i
-        DESTINATION Examples/Stereo
+        DESTINATION bin/Examples
         COMPONENT examples)
 endif()
