--- a/Examples_old/Monocular/CMakeLists.txt
+++ b/Examples_old/Monocular/CMakeLists.txt
@@ -20,13 +20,13 @@ if(realsense2_FOUND)
     target_link_libraries(mono_realsense_D435i_old ${PROJECT_NAME})
 endif()
 
-# Install executables to Examples_old/Monocular directory
+# Install executables to bin/Examples_old directory
 install(TARGETS mono_tum_old mono_kitti_old mono_euroc_old mono_tum_vi_old
-    DESTINATION Examples_old/Monocular
+    DESTINATION bin/Examples_old
     COMPONENT examples)
 
 if(realsense2_FOUND)
     install(TARGETS mono_realsense_t265_old mono_realsense_D435i_old
-        DESTINATION Examples_old/Monocular
+        DESTINATION bin/Examples_old
         COMPONENT examples)
 endif()
