--- a/Examples_old/RGB-D/CMakeLists.txt
+++ b/Examples_old/RGB-D/CMakeLists.txt
@@ -8,13 +8,13 @@ if(realsense2_FOUND)
     target_link_libraries(rgbd_realsense_D435i_old ${PROJECT_NAME})
 endif()
 
-# Install executables to Examples_old/RGB-D directory
+# Install executables to bin/Examples_old directory
 install(TARGETS rgbd_tum_old
-    DESTINATION Examples_old/RGB-D
+    DESTINATION bin/Examples_old
     COMPONENT examples)
 
 if(realsense2_FOUND)
     install(TARGETS rgbd_realsense_D435i_old
-        DESTINATION Examples_old/RGB-D
+        DESTINATION bin/Examples_old
         COMPONENT examples)
 endif()
